enumset_test_nightly/tests/compile-fail/explicit_repr.stderr
error[E0599]: the function or associated item `from_repr` exists for struct `enumset::EnumSet<OkayEnumButCantUseFromRepr>`, but its trait bounds were not satisfied
  --> tests/compile-fail/explicit_repr.rs:16:44
   |
 5 | enum OkayEnumButCantUseFromRepr {
   | ------------------------------- doesn't satisfy `OkayEnumButCantUseFromRepr: EnumSetTypeWithRepr`
...
16 |     EnumSet::<OkayEnumButCantUseFromRepr>::from_repr(1);
   |                                            ^^^^^^^^^ function or associated item cannot be called on `enumset::EnumSet<OkayEnumButCantUseFromRepr>` due to unsatisfied trait bounds
   |
note: if you're trying to build a new `enumset::EnumSet<OkayEnumButCantUseFromRepr>` consider using one of the following associated functions:
      enumset::EnumSet::<T>::new
      enumset::EnumSet::<T>::empty
      enumset::EnumSet::<T>::all
      enumset::EnumSet::<T>::only
      and $N others
  --> $WORKSPACE/enumset/src/impl_set.rs
   |
   |     pub const fn new() -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
   |     pub const fn empty() -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
   |     pub const fn all() -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
   |     set_common_methods!(T, T::Repr);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the following trait bounds were not satisfied:
           `OkayEnumButCantUseFromRepr: EnumSetTypeWithRepr`
note: the trait `EnumSetTypeWithRepr` must be implemented
  --> $WORKSPACE/enumset/src/traits.rs
   |
   | / pub unsafe trait EnumSetTypeWithRepr:
   | |     EnumSetType + EnumSetTypePrivate<Repr = <Self as EnumSetTypeWithRepr>::Repr>
   | |________________________________________________________________________________^
   = note: this error originates in the macro `set_common_methods` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the function or associated item `from_repr` exists for struct `enumset::EnumSet<OkayEnumButCantUseFromReprArray>`, but its trait bounds were not satisfied
  --> tests/compile-fail/explicit_repr.rs:17:49
   |
11 | enum OkayEnumButCantUseFromReprArray {
   | ------------------------------------ doesn't satisfy `_: EnumSetTypeWithRepr`
...
17 |     EnumSet::<OkayEnumButCantUseFromReprArray>::from_repr([1]);
   |                                                 ^^^^^^^^^ function or associated item cannot be called on `enumset::EnumSet<OkayEnumButCantUseFromReprArray>` due to unsatisfied trait bounds
   |
note: if you're trying to build a new `enumset::EnumSet<OkayEnumButCantUseFromReprArray>` consider using one of the following associated functions:
      enumset::EnumSet::<T>::new
      enumset::EnumSet::<T>::empty
      enumset::EnumSet::<T>::all
      enumset::EnumSet::<T>::only
      and $N others
  --> $WORKSPACE/enumset/src/impl_set.rs
   |
   |     pub const fn new() -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
   |     pub const fn empty() -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
   |     pub const fn all() -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
   |     set_common_methods!(T, T::Repr);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the following trait bounds were not satisfied:
           `OkayEnumButCantUseFromReprArray: EnumSetTypeWithRepr`
note: the trait `EnumSetTypeWithRepr` must be implemented
  --> $WORKSPACE/enumset/src/traits.rs
   |
   | / pub unsafe trait EnumSetTypeWithRepr:
   | |     EnumSetType + EnumSetTypePrivate<Repr = <Self as EnumSetTypeWithRepr>::Repr>
   | |________________________________________________________________________________^
   = note: this error originates in the macro `set_common_methods` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `OkayEnumButCantUseFromRepr: EnumSetTypeWithRepr` is not satisfied
  --> tests/compile-fail/explicit_repr.rs:18:5
   |
18 |     MixedEnumSet::<OkayEnumButCantUseFromRepr>::from_repr(1);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `EnumSetTypeWithRepr` is not implemented for `OkayEnumButCantUseFromRepr`
   |
note: required by a bound in `enumset::set::MixedEnumSet`
  --> $WORKSPACE/enumset/src/impl_set_mixed.rs
   |
   | pub struct MixedEnumSet<T: EnumSetTypeWithRepr> {
   |                            ^^^^^^^^^^^^^^^^^^^ required by this bound in `MixedEnumSet`

error[E0599]: the function or associated item `from_repr` exists for struct `enumset::set::MixedEnumSet<OkayEnumButCantUseFromRepr>`, but its trait bounds were not satisfied
  --> tests/compile-fail/explicit_repr.rs:18:49
   |
 5 | enum OkayEnumButCantUseFromRepr {
   | ------------------------------- doesn't satisfy `OkayEnumButCantUseFromRepr: EnumSetTypeWithRepr`
...
18 |     MixedEnumSet::<OkayEnumButCantUseFromRepr>::from_repr(1);
   |                                                 ^^^^^^^^^ function or associated item cannot be called due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `OkayEnumButCantUseFromRepr: EnumSetTypeWithRepr`
note: the trait `EnumSetTypeWithRepr` must be implemented
  --> $WORKSPACE/enumset/src/traits.rs
   |
   | / pub unsafe trait EnumSetTypeWithRepr:
   | |     EnumSetType + EnumSetTypePrivate<Repr = <Self as EnumSetTypeWithRepr>::Repr>
   | |________________________________________________________________________________^
